src/objects/Answers__c.object
<CustomObject>
    <fields>
        <fullName>CorrectAnswer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Correct Answer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Correct__c</fullName>
        <description>Used by the surveyresponse object to count the number of correct answers</description>
        <formula>IF(SurveyResponse__r.Survey__r.RecordType.Name == &quot;Exam&quot;,
 IF(ISBLANK(TextfieldAnswer__c),False,
   IF(Question__r.RecordType.DeveloperName = &apos;Multiple Choice&apos;,
      IF(CONTAINS(UPPER(SelectedAnswer__c),UPPER(Question__r.CorrectAnswer__c)),True,False), 
      IF(UPPER(SelectedAnswer__c) ==  UPPER(Question__r.CorrectAnswer__c),True,False)
   )
 ),
 False
)</formula>
        <label>Correct</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Question</label>
        <referenceTo>Question__c</referenceTo>
        <relationshipLabel>Answers</relationshipLabel>
        <relationshipName>Answers</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SelectedAnswer__c</fullName>
        <description>map the given answer to the selected answer choices</description>
        <formula>IF(SurveyResponse__r.Survey__r.RecordType.Name == &quot;Exam&quot;,
 IF(ISBLANK(TextfieldAnswer__c),&quot;&quot;,
   IF(Question__r.RecordType.Name == &quot;True/False&quot;,
     CASE(TextfieldAnswer__c,&quot;True&quot;,&quot;True&quot;,&quot;False&quot;),
     IF(Question__r.RecordType.Name == &quot;Radio&quot;,
        CASE(TextfieldAnswer__c, Question__r.Choice_A__c ,&quot;A&quot;, Question__r.Choice_B__c ,&quot;B&quot;, 
             Question__r.Choice_C__c ,&quot;C&quot;, Question__r.Choice_D__c,&quot;D&quot;,&quot;E&quot;),
        TextfieldAnswer__c
     ) 
   )
 ),
 &quot;&quot;
)</formula>
        <label>Selected Answer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SurveyResponse__c</fullName>
        <label>Survey Response</label>
        <referenceTo>SurveyResponse__c</referenceTo>
        <relationshipLabel>Answers</relationshipLabel>
        <relationshipName>Answers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TextfieldAnswer__c</fullName>
        <label>TextfieldAnswer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Answer</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>SurveyResponse__c</columns>
        <columns>TextfieldAnswer__c</columns>
        <columns>Question__c</columns>
        <columns>SelectedAnswer__c</columns>
        <columns>Correct__c</columns>
        <columns>CorrectAnswer__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AN-{0000}</displayFormat>
        <label>Answers Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Answers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>